--- a/d29_double_heart_click/index.html
+++ b/d29_double_heart_click/index.html
@@ -5,19 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
-      crossorigin="anonymous"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
-    <title>Double Click Heart</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Double Click heart</title>
   </head>
   <body>
-    <h3>Double click on the image to <i class="fas fa-heart"></i> it</h3>
+    <h2>Double Click on the Image to <i class="fas fa-heart"></i> it</h2>
     <small>You liked it <span id="times">0</span> times</small>
 
     <div class="loveMe"></div>
-
     <script src="script.js"></script>
   </body>
 </html>
